--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="portrait" appearance="dark"/>
+    <device id="retina6_72" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,44 +14,69 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="117" translatesAutoresizingMaskIntoConstraints="NO" id="mbP-X4-zFK">
-                                <rect key="frame" x="134" y="87" width="160" height="634"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="KBk-D4-IXc">
-                                        <rect key="frame" x="0.0" y="0.0" width="160" height="460"/>
-                                        <subviews>
-                                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-em-8iZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="160" height="140"/>
-                                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                                            </view>
-                                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-oE-5Sv">
-                                                <rect key="frame" x="0.0" y="160" width="160" height="140"/>
-                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
-                                            </view>
-                                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VsF-So-Q6W">
-                                                <rect key="frame" x="0.0" y="320" width="160" height="140"/>
-                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                            </view>
-                                        </subviews>
-                                    </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RP9-h5-W02">
-                                        <rect key="frame" x="0.0" y="577" width="160" height="57"/>
-                                        <color key="backgroundColor" name="AccentColor"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="37"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Start">
-                                            <color key="titleColor" systemColor="labelColor"/>
-                                        </state>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-em-8iZ">
+                                <rect key="frame" x="145" y="97" width="140" height="140"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="PQK-aB-ccE"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="xGL-Qq-z70"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-oE-5Sv">
+                                <rect key="frame" x="145" y="247" width="140" height="140"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="Uf8-TJ-cvp"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="Xf1-wj-bhR"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VsF-So-Q6W">
+                                <rect key="frame" x="145" y="397" width="140" height="140"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="16z-d7-vPK"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="FFe-Da-FHG"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RP9-h5-W02">
+                                <rect key="frame" x="142" y="683" width="146" height="57"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="146" id="SbX-WJ-Ak7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="37"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="lightButtonDidTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="u0j-fQ-NX1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Y0p-em-8iZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="38" id="5C0-Gq-gUc"/>
+                            <constraint firstItem="3eA-oE-5Sv" firstAttribute="top" secondItem="Y0p-em-8iZ" secondAttribute="bottom" constant="10" id="6hY-A1-If0"/>
+                            <constraint firstItem="Y0p-em-8iZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BWB-Sj-UEA"/>
+                            <constraint firstItem="VsF-So-Q6W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SEy-Bh-yDc"/>
+                            <constraint firstItem="3eA-oE-5Sv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VBT-Xf-vHe"/>
+                            <constraint firstItem="RP9-h5-W02" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fEN-Aq-UlO"/>
+                            <constraint firstItem="RP9-h5-W02" firstAttribute="top" secondItem="VsF-So-Q6W" secondAttribute="bottom" constant="146" id="jik-cp-GeS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RP9-h5-W02" secondAttribute="bottom" constant="158" id="uEa-Qt-5sz"/>
+                            <constraint firstItem="VsF-So-Q6W" firstAttribute="top" secondItem="3eA-oE-5Sv" secondAttribute="bottom" constant="10" id="xTA-8Y-9SM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="VsF-So-Q6W" id="Zb4-dM-62H"/>
+                        <outlet property="lightButton" destination="RP9-h5-W02" id="wWO-RH-8GZ"/>
+                        <outlet property="redLight" destination="Y0p-em-8iZ" id="2ak-Gy-f2Z"/>
+                        <outlet property="yellowLight" destination="3eA-oE-5Sv" id="EWj-OA-Mpu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
