--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-em-8iZ">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0p-em-8iZ">
                                 <rect key="frame" x="145" y="97" width="140" height="140"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <constraints>
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="xGL-Qq-z70"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-oE-5Sv">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-oE-5Sv">
                                 <rect key="frame" x="145" y="247" width="140" height="140"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
@@ -33,7 +33,7 @@
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="Xf1-wj-bhR"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VsF-So-Q6W">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VsF-So-Q6W">
                                 <rect key="frame" x="145" y="397" width="140" height="140"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
@@ -63,12 +63,15 @@
                             <constraint firstItem="Y0p-em-8iZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="38" id="5C0-Gq-gUc"/>
                             <constraint firstItem="3eA-oE-5Sv" firstAttribute="top" secondItem="Y0p-em-8iZ" secondAttribute="bottom" constant="10" id="6hY-A1-If0"/>
                             <constraint firstItem="Y0p-em-8iZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BWB-Sj-UEA"/>
+                            <constraint firstItem="VsF-So-Q6W" firstAttribute="leading" secondItem="Y0p-em-8iZ" secondAttribute="leading" id="GVw-oT-uhm"/>
                             <constraint firstItem="VsF-So-Q6W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SEy-Bh-yDc"/>
+                            <constraint firstItem="VsF-So-Q6W" firstAttribute="leading" secondItem="3eA-oE-5Sv" secondAttribute="leading" id="TJr-q9-ZkM"/>
                             <constraint firstItem="3eA-oE-5Sv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VBT-Xf-vHe"/>
                             <constraint firstItem="RP9-h5-W02" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fEN-Aq-UlO"/>
                             <constraint firstItem="RP9-h5-W02" firstAttribute="top" secondItem="VsF-So-Q6W" secondAttribute="bottom" constant="146" id="jik-cp-GeS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RP9-h5-W02" secondAttribute="bottom" constant="158" id="uEa-Qt-5sz"/>
                             <constraint firstItem="VsF-So-Q6W" firstAttribute="top" secondItem="3eA-oE-5Sv" secondAttribute="bottom" constant="10" id="xTA-8Y-9SM"/>
+                            <constraint firstItem="VsF-So-Q6W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="145" id="zQ6-5u-3Ox"/>
                         </constraints>
                     </view>
                     <connections>
